--- a/public/notes.html
+++ b/public/notes.html
@@ -15,8 +15,8 @@
       integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/Develop/public/assets/css/styles.css"/>
-    <script src="/Develop/public/assets/js/index.js"></script>
+    <link rel="stylesheet" href="./assets/css/styles.css"/>
+    <!-- <script src="./assets/js/index.js"></script> -->
   </head>
 
   <body>
@@ -45,6 +45,6 @@
         </div>
       </div>
     </div>
-    <script src="/Develop/public/assets/js/index.js"></script>
+    <script src="./assets/js/index.js"></script>
   </body>
 </html>
